<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Versacom Inventory</string>
    <string name="app_title">Versacom Mobile Inventory</string>
    <string name="activity_title_inventory_site">Inventory site</string>
    <string name="activity_title_select_inventory_item">Inventory item</string>
    <string name="scan">Scan</string>
    <string name="button_manual">Manual</string>
    <string name="checkout">Checkout</string>
    <string name="checkIn">CheckIn</string>
    <string name="save">Save</string>
    <string name="button_next">Next</string>
    <string name="button_sign_out">Signout</string>
    <string name="button_login">Login</string>
    <string name="label_select_site">Select inventory site: </string>
       <string name="label_select_customer_site_access">Select customer site access: </string>
    <string name="label_select_item">Enter item name: </string>
    <string name="service_not_avilable">The service is not available. Please contact customer support!</string>
    <string name="invalid_server_response">Invalid server response. Please contact customer support!</string>
    <string name="internal_server_error">System error. Please contact customer support!</string>
    <string name="turn_off_airplane_mode">@string/no_internet</string>
    <string name="no_internet">No internet connection. Please check your internet connection.</string>
    <string name="general_service_error">General service error. Please contact customer support!</string>
    <string name="error_dialog_title">An error has occurred</string>
    <string name="unknown">Unknown</string>
    <string name="retry">Retry</string>
       <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="processing">Processing&#8230;</string>
    <string name="barcode_label">Bar code: </string>
    <string name="item_name_label">Name: </string>
    <string name="item_fullname_label">Full name: </string>
    <string name="quantity_Label">Quantity: </string>
    <string name="item_unit_label">Unit: </string>
    <string name="email_hint">Please enter email address</string>
    <string name="password_hint">Please enter password</string>
    <string name="login_enter_authentication">Please enter email address/password</string>
	<string name="delete_confirmation_title">Delete confirmation</string>
	<string name="delete_confirmation_message">Want to remove this item?</string>
</resources>