<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/iv_home_logo"
        style="@style/DefaultComponentMargin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/home_icon_1" />
        
    <Button
        android:id="@+id/btn_checkOut" style="@style/DefaultComponentMargin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="launchCheckout"
        android:text="@string/checkout" />

    <Button
        android:id="@+id/btn_checkIn" style="@style/DefaultComponentMargin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="launchCheckIn"
        android:text="@string/checkIn" />
    
    <Button style="@style/DefaultComponentMargin" android:layout_marginTop="50dp"
        android:id="@+id/btn_Signout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="signOut"
        android:text="@string/button_sign_out" />
        
</LinearLayout>

